change some responsive

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="black">
         </div>
     </div>
-    <section class="what-is-cis">
+    <section class="what-is-cis" id="about">
         <div class="text">
             <h2>What Is CIS?</h2>
             <p>
@@ -71,7 +71,7 @@
 
         </div>
     </section>
-    <section class="our-events">
+    <section class="our-events" id="events">
         <div class="left-side">
             <div class="elipeses">
                 <img src="images/circle shapes.png" alt="">
@@ -152,7 +152,7 @@
             </div>
         </div>
     </section>
-    <section class="our-new-blogs">
+    <section class="our-new-blogs" id="blogs">
         <div class="left-side">
             <img src="images/Green Circles.png" alt="">
         </div>
@@ -246,7 +246,7 @@
         <div class="right-side"><img src="images/blue circles.png" alt=""></div>
     </section>
     <footer>
-        <section class="information">
+        <section class="information" id="contact">
             <div class="cis-logo">
                 <img src="images/cis_logo_navbar.png" alt="">
                 <div class="email">
